@@ -2,24 +2,32 @@ PostGIS 2.5.2
 XXXX/XX/XX
 
  * Bug fixes *
+
   - #4231, Support for PostgreSQL 12dev (remove use of pg_constraint.consrc)
            (Regina Obe, Laurenz Albe)
+
   - #4247, Avoid undefined behaviour in next_float functions (Raúl Marín)
+
   - #4249, Fix undefined behaviour in raster intersection (Raúl Marín)
+
   - #4246, Fix undefined behaviour in ST_3DDistance (Raúl Marín)
+
   - #4244, Avoid unaligned memory access in BOX2D_out (Raúl Marín)
+
   - #4139, Make mixed-dimension ND index build tree correctly.
   WARNING: REINDEX your ND index on tables that have records with different M/Z
            dimensions for &&& operator to work predictably.
            (Darafei Praliaskouski, Arthur Lesuisse, Andrew Gierth, Raúl Marín)
+
   - #4262, Document MULTISURFACE compatibility of ST_LineToCurve (Steven Ottens)
 
+  - #4267, Enable Proj 6 deprecated APIs (Darafei Praliaskouski)
 
 PostGIS 2.5.1
 2018/11/18
 
  * Bug fixes *
-  - #4183, St_AsMVTGeom: Drop invalid geometries after simplification (Raúl Marín)
+  - #4183, ST_AsMVTGeom: Drop invalid geometries after simplification (Raúl Marín)
   - #4188, Avoid division by zero in kmeans (Raúl Marín)
   - #4189, Fix undefined behaviour in SADFWrite (Raúl Marín)
   - #4191, Fix undefined behaviour in ptarray_clone_deep (Raúl Marín)
